syntax = "proto3";
package proto;
option go_package = "mailinglist/proto";
message EmailEntry {
    int64 id =1;
    string email = 2;
    int64 confirmed_at = 3;
    bool opt_out = 4;
}

message CreateEmailRequest { string email_addr = 1; }
message GetEmailRequest { string email_addr = 1; }
message UpdateEmailRequest { EmailEntry email_entry = 1; }
message DeleteEmailRequest { string email_addr = 1; }
message GetEmailBatchRequest {
    int32 page = 1;
    int32 count = 2;
}

message EmailReponse { optional EmailEntry email_entry = 1;}
message GetEmailBatchResponse { repeated EmailEntry email_entry = 1;}

service MailingListService {
    rpc CreateEmail(CreateEmailRequest) returns (EmailReponse) {}
    rpc GetEmail(GetEmailRequest) returns (EmailReponse) {}
    rpc UpdateEmail(UpdateEmailRequest) returns (EmailReponse) {}
    rpc DeleteEmail(DeleteEmailRequest) returns (EmailReponse) {}
    rpc GetEmailBatch(GetEmailBatchRequest) returns (GetEmailBatchResponse) {}
}
